画像表示の実装

--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -17,8 +17,7 @@
   </div>
   <div class="lower-message">
     <div class="message-content">
-      <!-- 投稿したメッセージ内容を記述する -->
-
+    <%= image_tag message.image, class: 'message-image' if message.image.attached? %>
     </div>
   </div>
 </div>
