--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="lower-message">
     <div class="message-content">
-    <%= image_tag message.image, class: 'message-image' if message.image.attached? %>
+    <%= image_tag message.image.variant(resize: '500x500'), class: 'message-image' if message.image.attached? %>
     </div>
   </div>
 </div>
